# ai_project_translator

./: .gitignore  README.md  main.py  pyproject.toml
ai_project_translator/: __init__.py  main.py
tests/: conftest.py  test_cli.py  test_config.py  test_config_env.py  test_directory_structure.py  test_file_handeling.py  test_integration.py  test_question.py  test_single_file.py
